http://jira.jboss.com/jira/browse/RF-3189 - images was aligned left. Line height in CSS, JAVA roles for IE7 fixed. Font-size in IE6 fixed http://jira.jboss.com/jira/browse/RF-3744 - Short backgrounds in docs was fixed

--- a/userguide/en/src/main/resources/css/html.css
+++ b/userguide/en/src/main/resources/css/html.css
@@ -6,6 +6,7 @@
     color:#6699CC;
     cursor:pointer;
 }
+
 body {
 background-image:url(../images/community/bkg_gradient.gif);
 background-repeat:repeat-x;
@@ -13,16 +14,28 @@ color:#333333;
 font-family:'Lucida Grande',Geneva,Verdana,Arial,sans-serif;
 font-size:12px;
 line-height:150%;
-margin:0pt auto;
-max-width:80em;
+max-width:1000px;
 padding:0em 2em;
-text-align:justify;
+text-align:center;
+}
+
+
+div.book, div.chapter, div.section{
+	width:1000px;
+	margin:0 auto;
+	text-align:justify;
+}
+
+#title, ul.docnav{
+	margin:0 auto;
+	width:1000px;
+
 }
 
 /* Center all images and Figure/Table titles */
-div.mediaobject img {margin:auto;}
+div.mediaobject img {margin:left;}
 
-p.title {text-align:center;}
+p.title {text-align:left;}
 
 pre.CSS {line-height:8px;}
 
@@ -86,3 +99,16 @@ padding-right:70px;
 } 
 .tbi {color: #aaaaaa;}
 .tbi p {color: #333333;}
+
+div.note, div.tip, div.important{
+	height:100%;
+}
+
+pre.JAVA {
+line-height:10px;
+!line-height:15px;
+}
+
+div.table-contents table{
+	font-size:12px;
+}
